--- a/.github/workflows/.drone.yml
+++ b/.github/workflows/.drone.yml
@@ -13,7 +13,7 @@ jobs:
     env:
       DD_API_KEY: ${{ secrets.DD_API_KEY }}
       DD_APP_KEY: ${{ secrets.DD_APP_KEY }}
-      DD_TEST_PUBLIC_ID: w76-br9-fbc  # Replace with your real test ID
+      # DD_TEST_PUBLIC_ID: w76-br9-fbc  # Replace with your real test ID
 
     steps:
       - name: Trigger Datadog Synthetic Test
