--- a/.github/workflows/.drone.yml
+++ b/.github/workflows/.drone.yml
@@ -1,45 +1,10 @@
-# name: Trigger Datadog Synthetic Test
-
-# on:
-#   workflow_dispatch: # Allows manual run from GitHub UI
-#   push:
-#     branches:
-#       - main  # or your default branch
-
-# jobs:
-#   run-datadog-test:
-#     runs-on: ubuntu-latest
-
-#     env:
-#       DD_API_KEY: ${{ secrets.DD_API_KEY }}
-#       DD_APP_KEY: ${{ secrets.DD_APP_KEY }}
-#       DD_TEST_PUBLIC_ID: w76-br9-fbc  # Replace with your real test ID
-
-#     steps:
-#       - name: Trigger Datadog Synthetic Test
-#         run: |
-#           echo "Triggering Datadog Synthetic Test with ID $DD_TEST_PUBLIC_ID"
-#           curl -X POST "https://api.datadoghq.com/api/v1/synthetics/tests/trigger/ci" \
-#             -H "Accept: application/json" \
-#             -H "Content-Type: application/json" \
-#             -H "DD-API-KEY: ${DD_API_KEY}" \
-#             -H "DD-APPLICATION-KEY: ${DD_APP_KEY}" \
-#             -d "{
-#               \"tests\": [
-#                 {
-#                   \"public_id\": \"${DD_TEST_PUBLIC_ID}\"
-#                 }
-#               ]
-#             }"
-name: Trigger Datadog Synthetic Test with ID
+name: Trigger Datadog Synthetic Test
 
 on:
-  workflow_dispatch:
-    inputs:
-      dd_test_public_id:
-        description: "Datadog Test Public ID"
-        required: true
-        default: "w76-br9-fbc"
+  workflow_dispatch: # Allows manual run from GitHub UI
+  push:
+    branches:
+      - main  # or your default branch
 
 jobs:
   run-datadog-test:
@@ -48,20 +13,21 @@ jobs:
     env:
       DD_API_KEY: ${{ secrets.DD_API_KEY }}
       DD_APP_KEY: ${{ secrets.DD_APP_KEY }}
+      DD_TEST_PUBLIC_ID: w76-br9-fbc  # Replace with your real test ID
 
     steps:
       - name: Trigger Datadog Synthetic Test
         run: |
-          echo "Triggering Datadog test with public ID: ${{ github.event.inputs.dd_test_public_id }}"
+          echo "Triggering Datadog Synthetic Test with ID $DD_TEST_PUBLIC_ID"
           curl -X POST "https://api.datadoghq.com/api/v1/synthetics/tests/trigger/ci" \
             -H "Accept: application/json" \
             -H "Content-Type: application/json" \
-            -H "DD-API-KEY: $DD_API_KEY" \
-            -H "DD-APPLICATION-KEY: $DD_APP_KEY" \
+            -H "DD-API-KEY: ${DD_API_KEY}" \
+            -H "DD-APPLICATION-KEY: ${DD_APP_KEY}" \
             -d "{
               \"tests\": [
                 {
-                  \"public_id\": \"${{ github.event.inputs.dd_test_public_id }}\"
+                  \"public_id\": \"${DD_TEST_PUBLIC_ID}\"
                 }
               ]
             }"
