--- a/.github/workflows/.drone.yml
+++ b/.github/workflows/.drone.yml
@@ -1,37 +1,22 @@
-# name: Trigger Datadog Synthetic Test
+name: Trigger Datadog Synthetic Test
 
-# on:
-#   workflow_dispatch: # Allows manual run from GitHub UI
-#   push:
-#     branches:
-#       - main  # or your default branch
+on:
+  workflow_dispatch: # Allows manual run from GitHub UI
+  push:
+    branches:
+      - main  # or your default branch
 
-# jobs:
-#   run-datadog-test:
-#     runs-on: ubuntu-latest
+jobs:
+  run-datadog-test:
+    runs-on: ubuntu-latest
 
-#     env:
-#       DD_API_KEY: ${{ secrets.DD_API_KEY }}
-#       DD_APP_KEY: ${{ secrets.DD_APP_KEY }}
-#       DD_TEST_PUBLIC_ID: w76-br9-fbc  # Replace with your real test ID
+    env:
+      DD_API_KEY: ${{ secrets.DD_API_KEY }}
+      DD_APP_KEY: ${{ secrets.DD_APP_KEY }}
+      DD_TEST_PUBLIC_ID: w76-br9-fbc  # Replace with your real test ID
 
-#     steps:
-#       - name: Trigger Datadog Synthetic Test
-#         run: |
-#           echo "Triggering Datadog Synthetic Test with ID $DD_TEST_PUBLIC_ID"
-#           curl -X POST "https://api.datadoghq.com/api/v1/synthetics/tests/trigger/ci" \
-#             -H "Accept: application/json" \
-#             -H "Content-Type: application/json" \
-#             -H "DD-API-KEY: ${DD_API_KEY}" \
-#             -H "DD-APPLICATION-KEY: ${DD_APP_KEY}" \
-#             -d "{
-#               \"tests\": [
-#                 {
-#                   \"public_id\": \"${DD_TEST_PUBLIC_ID}\"
-#                 }
-#               ]
-#             }"
-- name: Trigger Datadog Synthetic Test
+    steps:
+    - name: Trigger Datadog Synthetic Test
   run: |
     echo "Triggering Datadog Synthetic Test with ID $DD_TEST_PUBLIC_ID"
     RESPONSE=$(curl -s -w "\n%{http_code}" -X POST "https://api.datadoghq.com/api/v1/synthetics/tests/trigger/ci" \
@@ -56,4 +41,20 @@
       echo "Error: Failed to trigger Datadog test"
       exit 1
     fi
+
+#       - name: Trigger Datadog Synthetic Test
+#         run: |
+#           echo "Triggering Datadog Synthetic Test with ID $DD_TEST_PUBLIC_ID"
+#           curl -X POST "https://api.datadoghq.com/api/v1/synthetics/tests/trigger/ci" \
+#             -H "Accept: application/json" \
+#             -H "Content-Type: application/json" \
+#             -H "DD-API-KEY: ${DD_API_KEY}" \
+#             -H "DD-APPLICATION-KEY: ${DD_APP_KEY}" \
+#             -d "{
+#               \"tests\": [
+#                 {
+#                   \"public_id\": \"${DD_TEST_PUBLIC_ID}\"
+#                 }
+#               ]
+#             }"
 
