--- a/.github/workflows/.drone.yml
+++ b/.github/workflows/.drone.yml
@@ -15,7 +15,7 @@ jobs:
       # DD_APP_KEY: fa4114c6f5616ada52107cea64ac9ab742be7015
       DD_API_KEY: ${{ secrets.DD_API_KEY }}
       DD_APP_KEY: ${{ secrets.DD_APP_KEY }}
-      # DD_TEST_PUBLIC_ID: w76-br9-fbc  # Replace with your real test ID
+      DD_TEST_PUBLIC_ID: w76-br9-fbc  # Replace with your real test ID
 
     steps:
       - name: Trigger Datadog Synthetic Test
