--- a/.github/workflows/.drone.yml
+++ b/.github/workflows/.drone.yml
@@ -1,35 +1,92 @@
-name: Trigger Datadog Synthetic Test
+# name: Trigger Datadog Synthetic Test
+
+# on:
+#   workflow_dispatch: # Allows manual run from GitHub UI
+#   push:
+#     branches:
+#       - main  # or your default branch
+
+# jobs:
+#   run-datadog-test:
+#     runs-on: ubuntu-latest
+
+#     env:
+#       # DD_API_KEY: dfe4c19a5fcc0e199ca6007cd6d56db2
+#       # DD_APP_KEY: fa4114c6f5616ada52107cea64ac9ab742be7015
+#       DD_API_KEY: ${{ secrets.DD_API_KEY }}
+#       DD_APP_KEY: ${{ secrets.DD_APP_KEY }}
+#       DD_TEST_PUBLIC_ID: w76-br9-fbc  # Replace with your real test ID
+
+#     steps:
+#       - name: Trigger Datadog Synthetic Test
+#         run: |
+#           echo "Triggering Datadog Synthetic Test with ID $DD_TEST_PUBLIC_ID"
+#           curl -X POST "https://api.datadoghq.com/api/v1/synthetics/tests/trigger/ci" \
+#             -H "Accept: application/json" \
+#             -H "Content-Type: application/json" \
+#             -H "DD-API-KEY: ${DD_API_KEY}" \
+#             -H "DD-APPLICATION-KEY: ${DD_APP_KEY}" \
+#             -d "{
+#               \"tests\": [
+#                 {
+#                   \"public_id\": \"${DD_TEST_PUBLIC_ID}\"
+#                 }
+#               ]
+#             }"
+name: Trigger Datadog Synthetic Tests by Tag in Parallel
 
 on:
-  workflow_dispatch: # Allows manual run from GitHub UI
+  workflow_dispatch:
   push:
     branches:
-      - main  # or your default branch
+      - main
 
 jobs:
-  run-datadog-test:
+  trigger-tests-by-tag:
     runs-on: ubuntu-latest
-
     env:
-      # DD_API_KEY: dfe4c19a5fcc0e199ca6007cd6d56db2
-      # DD_APP_KEY: fa4114c6f5616ada52107cea64ac9ab742be7015
       DD_API_KEY: ${{ secrets.DD_API_KEY }}
       DD_APP_KEY: ${{ secrets.DD_APP_KEY }}
-      DD_TEST_PUBLIC_ID: w76-br9-fbc  # Replace with your real test ID
+      TEST_TAG: "ci"   # Replace this with your actual tag
 
     steps:
-      - name: Trigger Datadog Synthetic Test
+      - name: Install jq (JSON parser)
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: Fetch tests matching tag
+        id: fetch_tests
         run: |
-          echo "Triggering Datadog Synthetic Test with ID $DD_TEST_PUBLIC_ID"
-          curl -X POST "https://api.datadoghq.com/api/v1/synthetics/tests/trigger/ci" \
-            -H "Accept: application/json" \
-            -H "Content-Type: application/json" \
-            -H "DD-API-KEY: ${DD_API_KEY}" \
-            -H "DD-APPLICATION-KEY: ${DD_APP_KEY}" \
-            -d "{
-              \"tests\": [
-                {
-                  \"public_id\": \"${DD_TEST_PUBLIC_ID}\"
-                }
-              ]
-            }"
+          echo "Fetching Datadog Synthetic tests with tag: $TEST_TAG"
+          response=$(curl -s -X GET "https://api.datadoghq.com/api/v1/synthetics/tests" \
+            -H "DD-API-KEY: $DD_API_KEY" \
+            -H "DD-APPLICATION-KEY: $DD_APP_KEY")
+
+          # Extract public_ids of tests containing the tag
+          public_ids=$(echo "$response" | jq -r --arg TAG "$TEST_TAG" '.tests[] | select(.tags | index($TAG)) | .public_id')
+
+          if [ -z "$public_ids" ]; then
+            echo "No tests found with tag $TEST_TAG"
+            echo "public_ids=" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          # Print public_ids separated by commas for output
+          echo "public_ids=$(echo "$public_ids" | paste -sd "," -)" >> $GITHUB_OUTPUT
+
+      - name: Trigger tests in parallel
+        if: steps.fetch_tests.outputs.public_ids != ''
+        run: |
+          IFS=',' read -ra ids <<< "${{ steps.fetch_tests.outputs.public_ids }}"
+          echo "Triggering ${#ids[@]} tests in parallel..."
+          for id in "${ids[@]}"; do
+            echo "Triggering test $id"
+            curl -X POST "https://api.datadoghq.com/api/v1/synthetics/tests/trigger/ci" \
+              -H "Accept: application/json" \
+              -H "Content-Type: application/json" \
+              -H "DD-API-KEY: $DD_API_KEY" \
+              -H "DD-APPLICATION-KEY: $DD_APP_KEY" \
+              -d "{\"tests\":[{\"public_id\":\"$id\"}]}" &
+          done
+          wait
+          echo "All tests triggered."
+
