--- a/.github/workflows/.drone.yml
+++ b/.github/workflows/.drone.yml
@@ -62,32 +62,32 @@ jobs:
             -H "DD-API-KEY: $DD_API_KEY" \
             -H "DD-APPLICATION-KEY: $DD_APP_KEY")
 
-          # Extract public_ids of tests containing the tag
-          public_ids=$(echo "$response" | jq -r --arg TAG "$TEST_TAG" '.tests[] | select(.tags | index($TAG)) | .public_id')
+          # # Extract public_ids of tests containing the tag
+          # public_ids=$(echo "$response" | jq -r --arg TAG "$TEST_TAG" '.tests[] | select(.tags | index($TAG)) | .public_id')
 
-          if [ -z "$public_ids" ]; then
-            echo "No tests found with tag $TEST_TAG"
-            echo "public_ids=" >> $GITHUB_OUTPUT
-            exit 0
-          fi
+          # if [ -z "$public_ids" ]; then
+          #   echo "No tests found with tag $TEST_TAG"
+          #   echo "public_ids=" >> $GITHUB_OUTPUT
+          #   exit 0
+          # fi
 
-          # Print public_ids separated by commas for output
-          echo "public_ids=$(echo "$public_ids" | paste -sd "," -)" >> $GITHUB_OUTPUT
+          # # Print public_ids separated by commas for output
+          # echo "public_ids=$(echo "$public_ids" | paste -sd "," -)" >> $GITHUB_OUTPUT
 
       - name: Trigger tests in parallel
         if: steps.fetch_tests.outputs.public_ids != ''
         run: |
-          IFS=',' read -ra ids <<< "${{ steps.fetch_tests.outputs.public_ids }}"
-          echo "Triggering ${#ids[@]} tests in parallel..."
-          for id in "${ids[@]}"; do
-            echo "Triggering test $id"
+          # IFS=',' read -ra ids <<< "${{ steps.fetch_tests.outputs.public_ids }}"
+          # echo "Triggering ${#ids[@]} tests in parallel..."
+          # for id in "${ids[@]}"; do
+            # echo "Triggering test $id"
             curl -X POST "https://api.datadoghq.com/api/v1/synthetics/tests/trigger/ci" \
               -H "Accept: application/json" \
               -H "Content-Type: application/json" \
               -H "DD-API-KEY: $DD_API_KEY" \
               -H "DD-APPLICATION-KEY: $DD_APP_KEY" \
-              -d "{\"tests\":[{\"public_id\":\"$id\"}]}" &
-          done
+          #     -d "{\"tests\":[{\"public_id\":\"$id\"}]}" &
+          # done
           wait
           echo "All tests triggered."
 
